<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/today"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/gotham_book"
            android:text="@string/time"
            android:textColor="@color/textContent"
            app:layout_constraintStart_toEndOf="@+id/tvDay"
            app:layout_constraintTop_toTopOf="@id/tvDay"
            app:layout_constraintBottom_toBottomOf="@+id/tvDay"/>

        <TextView
            android:id="@+id/tvExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/gotham_book"
            android:text="@string/exercise"
            android:textColor="@color/textHeading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDay" />

        <TextView
            android:id="@+id/tvClub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/club"
            android:textColor="@color/textContent"
            app:layout_constraintStart_toEndOf="@+id/tvExercise"
            app:layout_constraintTop_toTopOf="@+id/tvExercise"
            app:layout_constraintBottom_toBottomOf="@+id/tvExercise"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>