<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/tvClubNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/gotham_medium"
        android:text="@string/hoursTitle"
        android:textColor="@color/textHeading"
        android:textSize="@dimen/modalHeader"
        app:drawableRightCompat="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llDayOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClubNameLabel">

        <TextView
            android:id="@+id/tvDayOneName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/wednesday"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />

        <TextView
            android:id="@+id/tvDayOneTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/clubTime"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDayTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDayOne">

        <TextView
            android:id="@+id/tvDayTwoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/thursday"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />

        <TextView
            android:id="@+id/tvDayTwoTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/clubTime"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDayThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDayTwo">

        <TextView
            android:id="@+id/tvDayThreeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/friday"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />

        <TextView
            android:id="@+id/tvDayThreeTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/clubTime"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDayFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDayThree">

        <TextView
            android:id="@+id/tvDayFourName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/saturday"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />

        <TextView
            android:id="@+id/tvDayFourTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/clubTime"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDayFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDayFour">

        <TextView
            android:id="@+id/tvDayFiveName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/sunday"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />

        <TextView
            android:id="@+id/tvDayFiveTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/clubTime"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDaySix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDayFive">

        <TextView
            android:id="@+id/tvDaySixName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/monday"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />

        <TextView
            android:id="@+id/tvDaySixTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/clubTime"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDaySeven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDaySix"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvDaySevenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/tuesday"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />

        <TextView
            android:id="@+id/tvDaySevenTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/gotham_book"
            android:text="@string/clubTime"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/textButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>